--- a/styles.css
+++ b/styles.css
@@ -1,482 +1,507 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 * {
-    padding: 0;
     margin: 0;
-    font-family: 'Poppins';
+    padding: 0;
 }
 
-header {
-    background-color: #636c79;
-    width: 98.7vw;
-    height: 100vh;
+:root {
+    --nav-bg-color: #636c79;
+    --text-white-color: #fff;
+    --green-btn-bg: #8bb7a2;
+    --light-black: #1b1d21;
+    --gray-shade: #585858;
+    --footer-bg-color: #10181d;
 }
 
-
-/* Navbar  */
-
-.navbar {
-    position: absolute;
-    left: 32%;
-    top: 5%;
+body {
+    font-family: "Poppins", sans-serif;
 }
 
-.nav-item {
-    margin-left: 40px;
-    color: #ffffffe3;
-}
-
-.navbar .nav-item:nth-child(7) {
-    margin-left: 120px;
-    border: 1px solid #ffffff38;
-    padding: 8px 45px;
-}
-
-.logo {
-    padding: 26px 50px;
-}
-
-
-/* business content  */
-
-.business-content {
-    width: 100%;
-    float: left;
-}
-
-.left-section {
-    width: 50%;
-    float: left;
-}
-
-.left-section img {
-    width: 400px;
-    height: 480px;
-    margin-left: 140px;
-    border-radius: 5px;
-}
-
-.right-section {
-    width: 50%;
-    float: left;
-}
-
-.right-section h1 {
-    font-size: 3rem;
-    color: #fff;
-    margin-top: 35px;
-}
-
-.right-section p {
-    margin-top: 30px;
-    line-height: 1.8;
-    color: #ffffffc2;
-}
-
-.btn {
-    margin-top: 30px;
-}
-
-.btn img {
-    width: 17px;
-    position: absolute;
-    top: 86.3%;
-    left: 51%;
-}
-
-.btn-email button {
-    width: 62%;
-    height: 55px;
-}
-
-.btn-email p {
-    position: absolute;
-    color: #00000075;
-    top: 81.3%;
-    left: 53%;
-}
-
-.btn-talk {
-    position: absolute;
-    top: 84.2%;
-    left: 69.8%;
-}
-
-.btn-talk button {
-    padding: 12px 45px;
-    background-color: #8bb7a2;
-    border: none;
-}
-
-
-/* target   */
-
-.target {
+.wrapper {
     width: 100%;
 }
 
-.target-content {
-    margin-top: 100px;
-    text-align: center;
-    font-size: 1.5rem;
-}
-
-.target-up {
-    width: 100%;
-    float: left;
-    margin-top: 30px;
-}
-
-.target-one {
-    width: 25%;
-    float: left;
-    text-align: center;
-}
-
-.target-one h1 {
-    font-size: 2.5rem;
-}
-
-.target-one p {
-    font-size: 1rem;
-    color: #000000b0;
-}
-
-.target-down img {
-    margin-top: 50px;
-    width: 1000px;
-    height: 400px;
-    margin-left: 180px;
-}
-
-
-/* design   */
-
-.design {
-    width: 100%;
-}
-
-.design-up {
-    margin-top: 200px;
-}
-
-.design-up h1 {
-    text-align: center;
-    font-size: 2.4rem;
-}
-
-.design-down {
-    width: 100%;
-    margin-top: 50px;
-}
-
-.left-design-section {
-    width: 40%;
-    float: left;
-    margin-left: 120px;
-    margin-top: 80px;
-}
-
-.left-design-section h1 {
-    font-size: 2rem;
-}
-
-.left-design-section p {
-    margin-top: 30px;
-    line-height: 1.7;
-    color: #0000009c;
-}
-
-.btn-design {
-    margin-top: 30px;
-    padding: 13px 60px;
-    background-color: #8bb7a2;
-    border: none;
-    color: #fff;
-    font-size: 1.1rem;
-}
-
-.right-design-section {
-    width: 50%;
-    float: left;
-}
-
-.right-design-section img {
-    width: 500px;
-    height: 470px;
-    margin-left: 65px;
-}
-
-
-/* digital  */
-
-.digital {
-    width: 100%;
-    float: left;
-    margin-top: 100px;
-}
-
-.left-digital-section {
-    width: 50%;
-    float: left;
-}
-
-.left-digital-section img {
-    width: 480px;
-    height: 470px;
-    margin-left: 130px;
-}
-
-.right-digital-section {
-    width: 50%;
-    float: left;
-    margin-top: 100px;
-}
-
-.right-digital-section h1 {
-    font-size: 2rem;
-}
-
-.right-digital-section p {
-    margin-top: 30px;
-    line-height: 1.7;
-    color: #0000009c;
-}
-
-.btn-right-digital-section {
-    margin-top: 30px;
-    padding: 13px 60px;
-    background-color: #8bb7a2;
-    border: none;
-    color: #fff;
-    font-size: 1.1rem;
-}
-
-
-/* judge   */
-
-.judge {
-    width: 100%;
-    float: left;
-    margin-top: 100px;
-}
-
-.left-judge-section {
-    width: 40%;
-    float: left;
-    margin-top: 100px;
-    margin-left: 120px;
-}
-
-.left-judge-section h1 {
-    font-size: 2rem;
-}
-
-.left-judge-section p {
-    margin-top: 30px;
-    line-height: 1.7;
-    color: #0000009c;
-}
-
-.btn-judge-section {
-    margin-top: 30px;
-    padding: 13px 60px;
-    background-color: #8bb7a2;
-    border: none;
-    color: #fff;
-    font-size: 1.1rem;
-}
-
-.right-judge-section {
-    width: 50%;
-    float: left;
-}
-
-.right-judge-section img {
-    width: 500px;
-    height: 470px;
-    margin-left: 90px;
-}
-
-
-/* team  */
-
-.team {
-    width: 100%;
-    float: left;
-    margin-top: 100px;
-}
-
-.left-team-section {
-    width: 40%;
-    float: left;
-    margin-left: 120px;
-    font-size: 1.5rem;
-}
-
-.right-team-section {
-    width: 50%;
-    float: left;
-    color: #0000009c;
-    line-height: 1.7;
-    margin-left: -10px;
-    margin-top: 6px;
-}
-
-
-/* team logo  */
-
-.three-team-logo {
+.container {
     width: 80%;
-    float: left;
-    margin-top: 50px;
-    margin-left: 180px;
+    margin: 0 auto;
 }
 
-.team-logo {
-    width: 33%;
-    float: left;
+.navBar {
+    padding: 16px 0;
+    background-color: var(--nav-bg-color);
 }
 
-.team-logo img {
-    width: 300px;
-    height: 350px;
+nav div {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.team-logo h1 {
-    font-size: 1.1rem;
+.brandLogo img {
+    height: 30px;
+}
+
+nav div ul {
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+}
+
+nav div ul li {
+    padding: 0 16px;
+    margin-left: 15px;
+}
+
+.menu {
+    display: none;
+}
+
+nav div ul li a {
+    display: inline-flex;
+    text-decoration: none;
+    color: var(--text-white-color);
+}
+
+nav div ul li button {
+    width: 150px;
+    padding: 8px 24px;
+    margin-left: 50px;
+    font-size: 14px;
+    color: var(--text-white-color);
+    cursor: pointer;
+    background-color: var(--nav-bg-color);
+    border: 1px solid var(--text-white-color);
+}
+
+.imageWithTextSection {
+    padding: 80px 0;
+    background-color: var(--nav-bg-color);
+}
+
+.imageWithTextSection .leftBox,
+.imageWithTextSection .rightBox {
+    width: 50%;
+}
+
+.imageWithTextSection .container {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.imageWithTextSection .leftBox img {
+    width: 75%;
+    aspect-ratio: 1/1.2;
+    object-fit: cover;
+    object-position: center;
+    display: block;
+}
+
+.imageWithTextSection .rightBox h2 {
+    font-size: 50px;
+    color: var(--text-white-color);
+    font-weight: 700;
+    line-height: 1.3;
     margin-bottom: 15px;
 }
 
-.team-logo p {
-    font-size: 0.88rem;
-    color: #0000009c;
-    line-height: 1.6;
-}
-
-.btn-logo {
-    margin-top: 60px;
-    padding: 11px 50px;
-    background-color: #8bb7a2;
-    border: none;
-    color: #fff;
-    font-size: 1.1rem;
-    margin-left: 420px;
-    margin-bottom: 100px;
-}
-
-
-/* footer  */
-
-.content {
-    margin-top: 248px;
-}
-
-.top {
-    width: 100%;
-    float: left;
-    background-color: #10181d;
-    padding: 30px 0px;
-    font-size: 1.5rem;
-}
-
-.logo-details {
-    width: 40%;
-    float: left;
-    margin-left: 110px;
-    margin-top: 10px;
-}
-
-.media-icons {
-    width: 20%;
-    float: left;
-    margin-left: 250px;
-}
-
-.media-icons a {
-    margin-left: 10px;
-}
-
-.fa-facebook-f {
-    background-color: #282f34;
-    border-radius: 100%;
-    padding: 15px;
-    font-size: 10px;
-    color: #fff;
-}
-
-.fa-twitter {
-    background-color: #282f34;
-    border-radius: 100%;
-    padding: 15px;
-    font-size: 10px;
-    color: #fff;
-}
-
-.fa-instagram {
-    background-color: #282f34;
-    border-radius: 100%;
-    padding: 15px;
-    font-size: 10px;
-    color: #fff;
-}
-
-.fa-github {
-    background-color: #282f34;
-    border-radius: 100%;
-    padding: 15px;
-    font-size: 10px;
-    color: #fff;
-}
-
-.line {
-    position: absolute;
-    width: 78%;
-    top: 680%;
-    left: 8.8%;
-}
-
-.line hr {
-    border: 1px solid #ffffff5e;
-}
-
-.link-boxes {
-    width: 100%;
-    float: left;
-    background-color: #10181d;
-    padding: 50px 0px;
-}
-
-.box li {
-    list-style: none;
-    color: #fff;
-}
-
-.box li a {
-    text-decoration: none;
-    color: #ffffff5e;
-}
-
-.box {
-    width: 10%;
-    float: left;
-    margin-left: 110px;
-    line-height: 2.7;
-    font-size: 0.8rem;
-}
-
-.input-box {
-    color: #fff;
-    width: 12%;
-}
-
-.input-box li {
-    color: #ffffff5e;
-}
-
-.input-box li:nth-child(2) {
-    margin-top: -8px;
-}
-
-.input-box .link_name {
+.imageWithTextSection .rightBox p {
+    padding: 20px 0;
+    color: var(--text-white-color);
+    opacity: 0.8;
+    font-weight: 300;
     margin-bottom: 10px;
-    color: #fff;
+}
+
+.imageWithTextSection .rightBox .emailBox {
+    background-color: var(--text-white-color);
+    padding: 8px 0;
+    width: 90%;
+    display: flex;
+    align-items: center;
+}
+
+.fa-envelope {
+    font-size: 18px;
+    padding: 16px;
+}
+
+.imageWithTextSection .rightBox .emailBox form {
+    flex-basis: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.imageWithTextSection .rightBox .emailBox form input {
+    border: none;
+    background-color: var(--text-white-color);
+    outline: none;
+}
+
+.imageWithTextSection .rightBox .emailBox form button,
+.personBox .leftBox button {
+    margin-right: 10px;
+    padding: 12px 40px;
+    background-color: var(--green-btn-bg);
+    color: var(--text-white-color);
+    border: none;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+.countersection {
+    padding: 80px 0;
+}
+
+.countersection h2.heading {
+    width: 60%;
+    font-size: 43px;
+    text-align: center;
+    margin: 0 auto;
+    color: var(--light-black);
+}
+
+.counterBox {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 50px 0;
+}
+
+.counterBox .box {
+    width: 25%;
+    text-align: center;
+}
+
+.counterBox .box h2 {
+    font-size: 44px;
+}
+
+.counterBox .box p {
+    font-size: 18px;
+    color: var(--gray-shade);
+}
+
+.video {
+    width: 100%;
+}
+
+.video img {
+    width: 100%;
+    aspect-ratio: 1/0.5;
+    object-fit: cover;
+}
+
+.ourWorksection {
+    padding: 80px 0;
+}
+
+.ourWorksection h2.heading {
+    width: 60%;
+    font-size: 48px;
+    text-align: center;
+    margin: 0 auto;
+    color: var(--light-black);
+}
+
+.mainWorkMainBox {
+    padding-top: 50px;
+}
+
+.personBox {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.personBox .leftBox,
+.personBox .rightBox {
+    width: 50%;
+}
+
+.personBox .rightBox {
+    padding: 50px 0;
+}
+
+.personBox .rightBox img {
+    margin: 0 auto;
+    width: 80%;
+    display: block;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    object-position: center;
+}
+
+.oddPerson {
+    flex-direction: row-reverse;
+}
+
+.personBox .leftBox h2 {
+    font-size: 44px;
+    font-weight: 600;
+}
+
+.personBox .leftBox p,
+.teamBox .contentBox p {
+    padding: 20px 0;
+    color: var(--gray-shade);
+    font-weight: 400;
+    opacity: 1;
+    font-size: 18px;
+}
+
+.ourTeamhead {
+    display: flex;
+}
+
+.ourTeamhead h2 {
+    width: 20%;
+}
+
+.ourTeamhead p {
+    width: 40%;
+    margin-left: 380px;
+}
+
+.teamMainSection {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.teamBox {
+    width: 33.33%;
+}
+
+.teamBox .marginDiv {
+    margin: 20px 20px 0 0;
+    padding: 20px 20px 0 0;
+}
+
+.teamBox .imageBox img {
+    width: 100%;
+    display: block;
+    aspect-ratio: 1/1.1;
+    object-fit: cover;
+    object-position: center;
+}
+
+.teamBox .contentBox h2 {
+    font-size: 24px;
+    color: var(--light-black);
+    font-weight: 600;
+    padding: 10px 0;
+}
+
+.teamBox .contentBox p {
+    padding: 0;
+}
+
+.teamMainSection button {
+    width: 150px;
+    padding: 10px 24px;
+    margin-left: 450px;
+    font-size: 14px;
+    color: var(--text-white-color);
+    cursor: pointer;
+    background-color: #8bb7a2;
+    border: 1px solid var(--text-white-color);
+    margin-top: 50px;
+}
+
+footer {
+    padding: 30px 0;
+    background-color: var(--footer-bg-color);
+}
+
+.footerHead {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 30px;
+    flex-wrap: wrap;
+    border-bottom: 1px solid var(--gray-shade);
+}
+
+.footerHead img {
+    height: 40px;
+}
+
+.footerHead ul {
+    display: flex;
+    list-style-type: none;
+}
+
+.footerHead ul li {
+    padding: 15px;
+    border-radius: 50%;
+    height: 25px;
+    width: 25px;
+    margin-left: 10px;
+    text-align: center;
+    background-color: #ffffff1a;
+    cursor: pointer;
+}
+
+.footerHead ul li .fab {
+    font-size: 14px;
+    color: var(--text-white-color);
+}
+
+.footerBottom {
+    width: 100%;
+    display: flex;
+    padding: 50px 0;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.footerBottom ul {
+    list-style: none;
+    width: 20%;
+}
+
+.footerBottom ul li h2 {
+    font-size: 20px;
+    font-weight: 600;
+    color: var(--text-white-color);
+    opacity: 0.8;
+}
+
+.footerBottom ul li {
+    padding: 8px 0;
+    color: var(--gray-shade);
+}
+
+
+/* Responsive  */
+
+@media only screen and (max-width: 1024px) {
+    nav div ul li {
+        display: none;
+    }
+    .menu {
+        display: block !important;
+        font-size: 24px;
+    }
+    .imageWithTextSection .rightBox h2 {
+        font-size: 36px;
+    }
+    .imageWithTextSection .rightBox .emailBox {
+        width: 100%;
+    }
+    .countersection h2.heading {
+        width: 100%;
+    }
+    .personBox .leftBox h2 {
+        font-size: 28px;
+    }
+    .personBox .leftBox p,
+    .teamBox .contentBox p {
+        font-size: 16px;
+    }
+    .ourTeamhead p {
+        text-align: justify;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    .imageWithTextSection .leftBox,
+    .imageWithTextSection .rightBox {
+        width: 100%;
+        text-align: center;
+    }
+    .imageWithTextSection .leftBox img {
+        margin: 0 auto;
+        aspect-ratio: 1/1;
+        padding: 0 0 20px 0;
+    }
+    .footerBottom {
+        justify-content: center;
+    }
+    .footerBottom ul {
+        width: 33.33%;
+        padding-bottom: 20px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .countersection h2.heading {
+        font-size: 32px;
+    }
+    .counterBox .box h2 {
+        font-size: 32px;
+    }
+    .counterBox .box {
+        width: 50%;
+        margin-bottom: 16px;
+    }
+    .counterBox {
+        align-items: baseline;
+    }
+    .counterBox .box p {
+        font-size: 16px;
+    }
+    .personBox {
+        flex-direction: column-reverse;
+    }
+    .personBox .leftBox,
+    .personBox .rightBox {
+        width: 100%;
+    }
+    .personBox .leftBox {
+        text-align: center;
+    }
+    .teamMainSection .teamBox {
+        width: 100%;
+    }
+    .teamBox .imageBox img {
+        aspect-ratio: 1/0.9;
+    }
+    .footerBottom {
+        justify-content: flex-start;
+    }
+    .footerBottom ul {
+        width: 50%;
+        padding-bottom: 20px;
+    }
+    .teamBox .marginDiv .contentBox {
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .imageWithTextSection .rightBox h2 {
+        font-size: 26px;
+        padding-top: 10px;
+    }
+    .countersection h2.heading {
+        font-size: 26px;
+    }
+    .footerHead {
+        justify-content: center;
+    }
+    .footerHead img {
+        padding: 10px 0;
+    }
+    .footerHead ul {
+        width: 100%;
+        justify-content: center;
+        padding: 10px 0;
+    }
+    .imageWithTextSection .rightBox .emailBox form button {
+        padding: 12px 16px;
+    }
+    .fa-envelope {
+        padding: 10px;
+    }
 }
